--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+.app {
+  height: 100vh;
+  background-image: url("../public/background.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app__main {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 80vh;
+  width: 100vw;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+h1 {
+  margin: 20px;
+}
+
+input {
+  height: 30px;
+  outline: none;
+  margin-bottom: 10px;
+  padding: 4px;
+  padding-left: 6px;
+  border: 2px solid black;
+  background-color: transparent;
+  border-radius: 4px;
+}
+
+input::placeholder {
+  color: black;
+}
+
+.app__balance {
+  background-color: black;
   color: white;
+  margin-top: 20px;
+  font-size: 18px;
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  height: 40px;
+  cursor: pointer;
+  background-color: black;
+  color: white;
+  border: 2px solid black;
+  padding: 10px;
 }
